# doc-approval-demo

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
backend/: .env.example  pyproject.toml
backend/app/: annotate_proc.py  case_assembly.py  case_decision.py  case_type_definition.py  case_types.py  config.py  db.py  doc_types.py  main.py  models.py  schemas.py  serialization.py  storage.py
backend/app/evaluation/: __init__.py  golden.py  runner.py  scorer.py
backend/app/extraction/: __init__.py  base.py  contract.py  definition.py  delivery_note.py  invoice.py  po.py
backend/app/pipeline/: __init__.py  agent.py  classify.py  doctype_assistant.py  doctype_schema_reference.py  metrics.py  preprocess.py  prescan.py  signature_detector.py  structuring.py
backend/app/reconcile/: __init__.py  candidates.py  engine.py  tolerance.py
backend/app/routes/: case_pipeline.py  case_types.py  (+12 more)
backend/golden/: contract-standard.json  invoice-clean.json  invoice-mismatch.json  mock-baseline.json
backend/scripts/: smoke.py
backend/tests/: conftest.py  generation_fixtures.py  test_agent.py  test_annotate_proc.py  test_authoring_agent.py  test_case_decision.py  test_case_pipeline.py  test_case_types_api.py  test_cases.py  test_classify.py  test_corrections_export.py  test_doc_types_api.py  test_doctype_assist.py  test_doctype_assist_routes.py  test_doctype_schema_reference.py  test_engines.py  test_eval_routes.py  test_eval_runner.py  test_eval_scorer.py  test_extract.py  test_extraction_definition.py  test_few_shot_examples.py  test_few_shot_structuring.py  test_field_edits.py  test_generation_binder.py  test_generation_convert.py  test_generation_fill.py  test_generation_forms.py  test_generation_lint.py  test_generation_mapper.py  test_generation_qa.py  test_generation_qa_vision.py  test_generation_rasterize.py  test_generation_render.py  test_generation_rich.py  test_generation_spreadsheet.py  test_generation_xlsx_preview.py  test_grounding.py  test_ingest.py  test_migrations.py  (+19 more)
(+173 files in other folders)
